--- a/hesten.css
+++ b/hesten.css
@@ -38,6 +38,15 @@ h2 {font-size: 1.3rem;}
 	padding-bottom: 5px;
 }
 
+form img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: auto;
+    padding-bottom: 5px;
+}
+
 #her {
 	width: 100%;
 	display: block;
@@ -65,6 +74,14 @@ h2 {font-size: 1.3rem;}
 	padding-bottom: 10px;
 	font-size: 1.3rem;
 }
+
+textarea {
+    width: 95%;
+    margin-left: 2%;
+    margin-right: auto;
+}
+
+
 
 @media screen and (min-width: 668px) {
 	.wrapper  {
@@ -105,11 +122,11 @@ h2 {font-size: 1.3rem;}
     padding: 10vh 0;
 }
 
-.modal .container {
+.modal .mcontainer {
     background-color: white;
     border-radius: 0.25rem;
-    width: 50vw;
-    padding: 2rem;
+    width: 65vw;
+    padding: 0.5rem;
     position: relative;
 }
 
@@ -121,4 +138,11 @@ h2 {font-size: 1.3rem;}
     position: absolute;
     top: 0.3rem;
     right: 0.5rem;
+}
+
+@media screen and (min-width: 668px) {
+   .modal .mcontainer {
+    width: 35vw;
+    padding: 2rem;
+   } 
 }
